feat: time out logic rethinked, fool proof logic for dumb dm

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,11 @@ CLIENT_ID=your_bot_client_id_here
 GUILD_ID=your_server_id_here
 
 # User Configuration
-TARGET_USER_ID=your_gm_id_here# ID du MJ
-PLAYER_IDS=player1_id,player2_id,player3_id# IDs des joueurs, séparés par des virgules
+TARGET_USER_ID=your_gm_id_here# DM ID
+PLAYER_IDS=player1_id,player2_id,player3_id# Players IDS (use "," to separate)
+CREATOR_ID=you#Me
+GAME_ROLE_ID=@role#role id
 
 # Channel Configuration
-NOTIFICATION_CHANNEL_ID=your_notification_channel_id_here# Canal où seront envoyées les notifications de session
-GAME_VOICE_CHANNEL_ID=your_voice_channel_id_here# Canal vocal pour les sessions
+NOTIFICATION_CHANNEL_ID=your_notification_channel_id_here# Notification Channel
+GAME_VOICE_CHANNEL_ID=your_voice_channel_id_here# Vocal Channel for event
