--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Botohiko_Kakita",
+  "name": "Botohiko Kakita",
   "version": "1.0.0",
   "description": "auto Dm my GM because is bad at scheduling",
   "main": "index.js",
