--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "auto Dm my GM because is bad at scheduling",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node deploy-commands.js && node src/index.js",
     "dev": "node deploy-commands.js && node src/index.js",
     "deploy": "node deploy-commands.js"
   },
