--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Botohiko Kakita",
   "version": "1.0.0",
-  "description": "auto Dm my GM because is bad at scheduling",
+  "description": "auto Dm my GM because he is bad at scheduling",
   "main": "index.js",
   "scripts": {
     "start": "node deploy-commands.js && node src/index.js",
